--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -92,13 +92,46 @@ select {
   border: 1px solid #cccccc;
   padding: 1.5em 1em;
   width: 50vw;
+  min-width: 350px;
   max-width: 400px;
   min-height: 400px;
+  -webkit-box-shadow: 0 3px 6px 3px #cccccc;
+          box-shadow: 0 3px 6px 3px #cccccc;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: .5em;
 }
 
 .formCon h2 {
-  margin-bottom: 1em;
-  text-align: center;
+  margin-bottom: .5em;
+}
+
+.formCon .btn {
+  border-radius: 5px;
+  padding: .5em;
+  background: #669cff;
+  color: white;
+  cursor: pointer;
+}
+
+.formCon .btn-primary:hover {
+  background: #337aff;
+}
+
+.formCon .btn-secondary {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  background: #41b72a;
+}
+
+.formCon .btn-secondary:hover {
+  background: #3ba626;
 }
 
 .form {
