--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,13 +9,35 @@
     border: 1px solid  hsl(0, 0%, 80%);
     padding: 1.5em 1em;
     width: 50vw;
+    min-width: 350px;
     max-width: 400px;
     min-height: 400px;
+    box-shadow: 0 3px 6px 3px hsl(0, 0%, 80%);
+    display:flex;
+    flex-direction:column;
+    gap: .5em;
     h2{
-        margin-bottom: 1em;
-        text-align:center;
+        margin-bottom: .5em;
+    }
+    .btn{
+        border-radius: 5px;
+        padding: .5em;
+        background:hsl(219, 100%, 70%);
+        color: white;
+        cursor: pointer; 
+        &-primary:hover{
+            background:hsl(219, 100%, 60%);
+        }
+        &-secondary{
+            align-self:center;
+            background:hsl(110, 63%, 44%);
+            &:hover{
+                background:hsl(110, 63%, 40%);
+            }
+        }
     }
 }
+
 .form{
     display:flex;
     flex-direction: column;
@@ -32,6 +54,7 @@
             cursor: pointer;
         }
     }
+    
     
     &__section{
         display:flex;
