--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,18 +12,25 @@
     border: 1px solid transparent;
     padding: .7em .5em .5em;
 }
+.message{
+    color: hsl(125, 44%, 46%);
+    background-color: hsl(125, 43%, 91%);
+    border-radius: 6px;
+    border: 1px solid transparent;
+    padding: .7em .5em .5em;
+}
 .formCon{
     border: 1px solid  hsl(0, 0%, 80%);
     padding: 1.5em 1em;
     width: 50vw;
     min-width: 350px;
     max-width: 400px;
-    min-height: 400px;
     box-shadow: 0 3px 6px 3px hsl(0, 0%, 80%);
     display:flex;
     flex-direction:column;
     gap: .5em;
     background:white;
+    border-radius: 4px;
     h2{
         margin-bottom: .5em;
     }
